--- a/pages/project2.html
+++ b/pages/project2.html
@@ -21,8 +21,8 @@
 	<link rel="stylesheet" href="../styles/main.css">
 	<link rel="stylesheet" href="../SlickNav/slicknav.css">
 	
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>	
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="../SlickNav/jquery.slicknav.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
