--- a/pages/project2.html
+++ b/pages/project2.html
@@ -24,7 +24,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="../SlickNav/jquery.slicknav.js"></script>
-	<script type="text/javascript">
+	<script>
 	$(document).ready(function(){
 	$('#menu').slicknav();
 	});
