--- a/pages/project1.html
+++ b/pages/project1.html
@@ -20,7 +20,7 @@
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="../styles/main.css">
 	<link rel="stylesheet" href="../SlickNav/slicknav.css">
-	
+	<!-- 	3 script for responsive menu Changed http to https to work on gitHub-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="../SlickNav/jquery.slicknav.js"></script>
@@ -60,10 +60,11 @@
 		
     		<h3 id="contact">Stuff about project 2</h3>
     		<ul>
-   				<li><strong>Imaging:</strong> Just Dream it</li>
+   				<li><strong>Imagine:</strong> Just Dream it</li>
    				<li><strong>Design:</strong> Plan and troubleshoot</li>
-   				<li><strong>Print:</strong> Bring to life</li>	
-			</ul>
+   				<li><strong>Print:</strong> Bring to life</li>
+   				<li><strong>Buy:</strong> And get it shipped to you</li>			
+   			</ul>
 
 	</main>
 	<footer>
