--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,8 +20,8 @@
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="../styles/main.css">
 	<link rel="stylesheet" href="../SlickNav/slicknav.css">
-	
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>	
+<!-- 	3 script for responsive menu Changed http to https to work on gitHub-->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="../SlickNav/jquery.slicknav.js"></script>
 	<script>
@@ -54,11 +54,11 @@
 		
 
 				
-    			<p>The IT world is a world of option.
+<!--     			<p>The IT world is a world of option.
 					Because there are many ways to do things and many tools to use, here are a few options.
 					Some might want to copy and paste an email on a laptop and use their online email account.
 					On a mobile device, it is easy to click on a link to open the device mail app and go from there.
-					Other people may want to make a phone call or send a text, so the option is here as well.</p>		
+					Other people may want to make a phone call or send a text, so the option is here as well.</p>		 -->
 	
 
     		<h3 id="contact">Here are are ways to get in touch</h3>
