--- a/pages/termsAndPrivacy.html
+++ b/pages/termsAndPrivacy.html
@@ -20,7 +20,7 @@
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="../styles/main.css">
 	<link rel="stylesheet" href="../SlickNav/slicknav.css">
-	
+	<!-- 	3 script for responsive menu Changed http to https to work on gitHub-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="../SlickNav/jquery.slicknav.js"></script>
