--- a/pages/project1.html
+++ b/pages/project1.html
@@ -71,7 +71,7 @@
 		
 		<h3>Bearing Presentation</h3>
 		
-		<p>Desinged with Fusion 360. Sliced with Cura, with custom setting for the suport.</p><br>
+		<p>Designed with Fusion 360. Sliced with Cura, with custom setting for the suport.</p><br>
 		
 		<div class="Wrapperpp">
 						<iframe src='https://onedrive.live.com/embed?cid=4F54657EC8F87B7D&resid=4F54657EC8F87B7D%2114657&authkey=AMlND_OjeLXBzS8&em=2&wdAr=1.7777777777777777' width='962px' height='565px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>		
