--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 					<ul>
 					<li>Ball bearings</li>
 					<li>Clock</li></ul>
-					<p>You can buy them or learn how to make them.
-					</p>					
+<!-- 					<p>You can buy them or learn how to make them.
+					</p>					 -->
 					
 <!-- 					You can buy my own production, and you can learn from my examples.<br>
 					Today, 3D printing allows everyone to have a fabrication machine at their finger’s tips. They are many ways to use this new tool, but my focus will be on two capabilities that this technology can provide.<br>
